--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ ul{
 }
 a{
 text-decoration:none;
-color:rgb(15, 87, 56);
+color:rgb(102, 17, 65);
 }
 h1, h2{
   margin: 0;
@@ -36,7 +36,7 @@ margin-left:15px;
 
 header{
   height:100px;
-  background-color:rgb(114, 19, 48);
+  background-color:rgb(102, 17, 65);
 }
 header a{
   color:rgb(255, 255, 255);
@@ -95,7 +95,7 @@ header a{
 /*=====Skill STYLES=====*/
 
 #skills{
-  background-color: rgb(39, 117, 34);
+  background-color: rgb(136, 45, 96);
   padding: 30px 0px;
   height: 475px;
   color: white;
@@ -135,7 +135,7 @@ header a{
 }
 .skills-icon i{
   font-size: 2em;
-  color: rgb(39, 117, 34);
+  color: rgb(102, 17, 65);
   margin: 9px 10px;
 }
 .skills-info h2{
@@ -148,7 +148,7 @@ header a{
 }
 .skills-icon2 i{
   font-size: 2em;
-  color: rgb(39, 117, 34);
+  color: rgb(102, 17, 65);
   margin: 9px 10px;
 }
 .skills-info2 h2{
@@ -161,7 +161,7 @@ header a{
 }
 .skills-icon3 i{
   font-size: 2em;
-  color: rgb(39, 117, 34);
+  color: rgb(102, 17, 65);
   margin: 9px 10px;
 }
 .skills-info3 h2{
@@ -176,42 +176,238 @@ header a{
 /*=====ABOUT STYLES=====*/
 
 #about{
-  background-color: rgb(215, 140, 110);
-  width: 100%;
-  color: white;
-  height: 300px;
+    height: 300px;
+    width: 100%;
+    padding: 45px 0 75px 0;
+    background-color: rgb(41, 0, 23);
 }
-#image{
-  width: 100px;
-  height: 100px;
-  float: left;
-}
-.image-box{
-  width: 100px;
-  height: 100px;
-  float: left;
-  padding: 25px;
-  margin-right: 10px;
-}
-#article{
-  width: 800px;
-  float: left;
-}
-.article-box{
-  width: 800px;
-  float: left;
-  padding: 25px;
-  border: 2px dotted #333;
-  margin: 10px 10px;
-}
-.article-box h2{
+#about h1{
   text-align: center;
+  font-size: 3em;
+  /*margin: 20px 0;*/
+
 }
+.pic{
+    width: 25%;
+    height: 100%;
+    float: left;
+}
+.pic img{
+    width: 100%;
+    height: auto;
+    margin: 10px 15px;
+    border-radius: 50%;
+}
+
+.bio{
+    height: 100%;
+    width: 60%;
+    float: left;
+    margin: 0 50px;
+    border: 1px dashed white;
+    padding: 15px 20px;
+    border-radius: 5px;
+    color: white;
+}
+#about h1{
+    text-align: center;
+    margin: 0;
+}
+#about p{
+    text-align: justify;
+}
+
 /*=====Footer Styles=====*/
-#footer{
-  background-color: rgb(39, 117, 34);
-  width: 100%;
-  color: white;
-  height: 100px;
+
+footer{
+    height: 100px;
+    background-color: rgb(136, 45, 96);
+    color: #fff;
+    margin: 0;
+    padding: 40px 20px;
+    clear: both;
+}
+.copyright{
+    text-align: center;
+}
+footer p{
+    margin: 0;
+}
+.soc-icons{
+    width: 400px;
+    margin: 20px auto;
+
+}
+footer .icon{
+    display: inline-block;
+    margin-right: 5px;
+    background-color: #fff;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+}
+
+.icon a{
+    color: #333;
+}
+.icon i{
+    font-size: 2em;
+    padding-top: 9px;
 }
 /*look it worked*/
+
+/*=====About Page Style=====*/
+
+#video{
+  width: 100%;
+  position: relative;
+  padding-bottom: 56%;
+  padding-top: 30px;
+  height: 0px;
+  overflow: hidden;
+}
+
+.video-container{
+  width: 98%;
+  margin: 0px auto;
+}
+
+#video iframe{
+  position: absolute;
+  top: 0px;
+  left:0px;
+  width: 100%;
+  height: 100%;
+
+}
+
+#about-page {
+  padding: 10px;
+    background-color: rgb(41, 0, 23);
+    height: 675px;
+    width: 100%;
+}
+
+#about-page article{
+  width: 600px;
+  float:left;
+  padding: 20px;
+  color: white;
+  margin-left: 100px;
+  margin-top: 20px;
+  border: 2px dotted white;
+}
+
+#about-page h1{
+  text-align: center;
+  font-size: 3em;
+}
+
+#about-page p{
+  line-height: 1.2em;
+  text-align: justify;
+}
+#about-page li{
+  padding: 2px;
+}
+
+.align-right{
+  margin-left: 24px;
+  margin-top:85px;
+  float: left;
+  width: 384px;
+}
+
+.selfie{
+  height: 450px;
+  width: auto;
+  margin-top: 40px;
+  margin-left: 50px;
+}
+
+figure {
+  margin: 0px;
+  padding: 0px;
+}
+
+/*=====Contact Styles=====*/
+
+  /*=====Map Styles=====*/
+
+.map-box{
+  background-color: rgb(41, 0, 23);
+  width: 75%;
+  height: 100%;
+  margin: 0 auto;
+}
+
+#map iframe{
+  width: 100%;
+  height: 100%;
+}
+#map {
+  height: 400px;
+  width: 100%;
+}
+  /*=====Contact Form Styles=====*/
+
+#contact{
+  background-color: rgb(41, 0, 23);
+  height: 500px;
+  width: 100%;
+  color: white;
+}
+
+#contact h1{
+  margin-left: 400px;
+  font-size: 3em;
+  padding: 20px 0px;
+}
+.contact-content{
+  width: 80%;
+  margin: 0 auto;
+  height: 100%;
+}
+.form-box{
+  width: 75%;
+  float: left;
+  padding: 0;
+}
+#contact form{
+  width: 75%;
+  margin: 0 auto;
+}
+#contact form input{
+  display: block;
+  width: 100%;
+  height: 45px;
+  margin: 10px 0;
+  background-color: aqua;
+}
+#contact textarea{
+  width: 100%;
+  height: 100px;
+  background-color: aqua;
+}
+.contact-info{
+width: 25%;
+float: left;
+}
+.contact-info ul{
+padding: 0;
+margin: 0;
+font-size: 1.25em;
+}
+.contact-info li{
+padding: 2px 0;
+}
+#contact button{
+  width: 150px;
+  height: 50px;
+  background-color: rgb(102, 17, 65);
+  border: 1px solid rgb(102, 17, 65);
+  font-size: 1.2em;
+  color: #fff;
+  cursor: pointer;
+  margin-left: 200px;
+}
